--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord-agent-bridge",
+  "name": "agent-messenger-bridge",
   "version": "0.1.0",
   "description": "Bridge AI agent outputs to Discord via Claude Code hooks and tmux",
   "type": "module",
