feat: switch CLI to Bun-first OpenTUI workflow
Make the default TUI OpenTUI-based with /session_new support while standardizing daemon startup and docs around Bun so runtime behavior is consistent.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "jsx": "preserve",
+    "jsxImportSource": "@opentui/solid",
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
