--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
   ],
   "author": "",
   "license": "MIT",
+  "engines": {
+    "bun": ">=1.3.0"
+  },
   "dependencies": {
+    "@opentui/core": "^0.1.77",
+    "@opentui/solid": "^0.1.77",
     "@types/yargs": "^17.0.35",
     "chalk": "^5.3.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "solid-js": "^1.9.9",
     "yargs": "^18.0.0"
   },
   "devDependencies": {
