--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "pack:release": "node scripts/pack-release.mjs",
     "publish:release": "node scripts/publish-release.mjs",
     "publish:release:dry-run": "node scripts/publish-release.mjs --dry-run",
+    "publish:release:single": "node scripts/publish-release.mjs --single",
+    "publish:release:single:dry-run": "node scripts/publish-release.mjs --single --dry-run",
     "publish:release:bun": "node scripts/publish-release.mjs --pm bun",
     "publish:release:bun:dry-run": "node scripts/publish-release.mjs --pm bun --dry-run",
+    "publish:release:bun:single": "node scripts/publish-release.mjs --pm bun --single",
+    "publish:release:bun:single:dry-run": "node scripts/publish-release.mjs --pm bun --single --dry-run",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
