fix: stop daemon auto-run side effect in compiled cli

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "discode": "bin/discode"
   },
   "scripts": {
-    "dev": "tsx src/index.ts",
+    "dev": "tsx src/daemon-entry.ts",
     "build": "tsup",
     "build:watch": "tsup --watch",
     "prepare": "npm run build",
-    "start": "node dist/index.js",
+    "start": "node dist/src/daemon-entry.js",
     "pages:dev": "vite",
     "pages:build": "vite build",
     "pages:preview": "vite preview",
