feat: default codex capture to final-only and align release versioning

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "build:release:binaries:linux": "bun run scripts/build-binaries.ts --profile linux",
     "build:release:manifest": "node scripts/rebuild-release-manifest.mjs",
     "build:release:npm": "node scripts/build-npm-package.mjs",
-    "build:release": "npm run build:release:binaries && npm run build:release:npm",
-    "build:release:linux": "npm run build:release:binaries:linux && npm run build:release:npm",
+    "build:release": "bun run build:release:binaries && bun run build:release:npm",
+    "build:release:linux": "bun run build:release:binaries:linux && bun run build:release:npm",
     "pack:release": "node scripts/pack-release.mjs",
     "publish:release": "node scripts/publish-release.mjs",
     "publish:release:dry-run": "node scripts/publish-release.mjs --dry-run",
@@ -40,18 +40,19 @@
     "publish:release:bun:single:dry-run": "node scripts/publish-release.mjs --pm bun --single --dry-run",
     "publish:release:bun:linux": "node scripts/publish-release.mjs --pm bun --profile linux",
     "publish:release:bun:linux:dry-run": "node scripts/publish-release.mjs --pm bun --profile linux --dry-run",
+    "version:check": "node scripts/check-version-alignment.mjs",
     "prompt-refiner:report": "node scripts/prompt-refiner-shadow-report.mjs",
     "prompt-refiner:export-gepa": "node scripts/prompt-refiner-shadow-to-gepa.mjs",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:e2e:tmux": "MUDCODE_E2E_TMUX=1 vitest run tests/tmux/manager.integration.test.ts",
     "test:replay:capture": "vitest run tests/bridge/capture-poller.replay.test.ts",
-    "release:verify:bun": "npm run typecheck && npm test && npm run test:e2e:tmux && npm run publish:release:bun:dry-run",
-    "release:verify:bun:single": "npm run typecheck && npm test && npm run test:e2e:tmux && npm run publish:release:bun:single:dry-run",
-    "release:verify:bun:linux": "npm run typecheck && npm test && npm run test:e2e:tmux && npm run publish:release:bun:linux:dry-run",
-    "release:publish:bun": "npm run release:verify:bun && npm run publish:release:bun -- --skip-build",
-    "release:publish:bun:single": "npm run release:verify:bun:single && npm run publish:release:bun:single -- --skip-build",
-    "release:publish:bun:linux": "npm run release:verify:bun:linux && npm run publish:release:bun:linux -- --skip-build",
+    "release:verify:bun": "bun run version:check && bun run typecheck && bun run test && bun run test:e2e:tmux && bun run publish:release:bun:dry-run",
+    "release:verify:bun:single": "bun run version:check && bun run typecheck && bun run test && bun run test:e2e:tmux && bun run publish:release:bun:single:dry-run",
+    "release:verify:bun:linux": "bun run version:check && bun run typecheck && bun run test && bun run test:e2e:tmux && bun run publish:release:bun:linux:dry-run",
+    "release:publish:bun": "bun run release:verify:bun && bun run publish:release:bun -- --skip-build",
+    "release:publish:bun:single": "bun run release:verify:bun:single && bun run publish:release:bun:single -- --skip-build",
+    "release:publish:bun:linux": "bun run release:verify:bun:linux && bun run publish:release:bun:linux -- --skip-build",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "ci:local": "node scripts/ci-local.mjs",
