--- a/.github/workflows/auto-version-bump.yml
+++ b/.github/workflows/auto-version-bump.yml
@@ -23,17 +23,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: "20"
+          bun-version: "1.3.9"
 
       - name: Bump patch version
         id: bump
         shell: bash
         run: |
           set -euo pipefail
-          NEXT_VERSION="$(node scripts/auto-bump-version.mjs)"
+          NEXT_VERSION="$(bun scripts/auto-bump-version.mjs)"
+          bun run version:check
           echo "next_version=${NEXT_VERSION}" >> "${GITHUB_OUTPUT}"
           echo "Next version: ${NEXT_VERSION}"
 
@@ -44,7 +45,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          git add package.json package-lock.json
+          git add package.json package-lock.json bun.lock
           if git diff --cached --quiet; then
             echo "No changes to commit."
             exit 0
