--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -103,6 +103,9 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Verify version alignment
+        run: bun run version:check
+
       - name: Download release artifacts
         uses: actions/download-artifact@v4
         with:
