--- a/package.json
+++ b/package.json
@@ -16,38 +16,39 @@
     "pages:dev": "vite",
     "pages:build": "vite build",
     "pages:preview": "vite preview",
-    "setup:claude-plugin": "tsx scripts/setup-claude-plugin.ts",
-    "setup:gemini-hook": "tsx scripts/setup-gemini-hook.ts",
-    "setup:opencode-plugin": "tsx scripts/setup-opencode-plugin.ts",
-    "migration:check": "node scripts/migrate-discode-cleanup.mjs --check",
-    "migration:clean": "node scripts/migrate-discode-cleanup.mjs --clean",
-    "build:release:binaries": "bun run scripts/build-binaries.ts",
-    "build:release:binaries:single": "bun run scripts/build-binaries.ts --single",
-    "build:release:binaries:host": "bun run scripts/build-binaries.ts --host-only",
-    "build:release:binaries:linux": "bun run scripts/build-binaries.ts --profile linux",
-    "build:release:manifest": "node scripts/rebuild-release-manifest.mjs",
-    "build:release:npm": "node scripts/build-npm-package.mjs",
+    "setup:claude-plugin": "tsx scripts/setup/setup-claude-plugin.ts",
+    "setup:gemini-hook": "tsx scripts/setup/setup-gemini-hook.ts",
+    "setup:opencode-plugin": "tsx scripts/setup/setup-opencode-plugin.ts",
+    "migration:check": "node scripts/migration/migrate-discode-cleanup.mjs --check",
+    "migration:clean": "node scripts/migration/migrate-discode-cleanup.mjs --clean",
+    "build:release:binaries": "bun run scripts/release/build-binaries.ts",
+    "build:release:binaries:single": "bun run scripts/release/build-binaries.ts --single",
+    "build:release:binaries:host": "bun run scripts/release/build-binaries.ts --host-only",
+    "build:release:binaries:linux": "bun run scripts/release/build-binaries.ts --profile linux",
+    "build:release:manifest": "node scripts/release/rebuild-release-manifest.mjs",
+    "build:release:npm": "node scripts/release/build-npm-package.mjs",
     "build:release": "bun run build:release:binaries && bun run build:release:npm",
     "build:release:linux": "bun run build:release:binaries:linux && bun run build:release:npm",
-    "pack:release": "node scripts/pack-release.mjs",
-    "publish:release": "node scripts/publish-release.mjs",
-    "publish:release:dry-run": "node scripts/publish-release.mjs --dry-run",
-    "publish:release:single": "node scripts/publish-release.mjs --single",
-    "publish:release:single:dry-run": "node scripts/publish-release.mjs --single --dry-run",
-    "publish:release:bun": "node scripts/publish-release.mjs --pm bun",
-    "publish:release:bun:dry-run": "node scripts/publish-release.mjs --pm bun --dry-run",
-    "publish:release:bun:single": "node scripts/publish-release.mjs --pm bun --single",
-    "publish:release:bun:single:dry-run": "node scripts/publish-release.mjs --pm bun --single --dry-run",
-    "publish:release:bun:linux": "node scripts/publish-release.mjs --pm bun --profile linux",
-    "publish:release:bun:linux:dry-run": "node scripts/publish-release.mjs --pm bun --profile linux --dry-run",
-    "version:check": "node scripts/check-version-alignment.mjs",
-    "todo:check": "node scripts/check-todo-fixme.mjs",
-    "prompt-refiner:report": "node scripts/prompt-refiner-shadow-report.mjs",
-    "prompt-refiner:export-gepa": "node scripts/prompt-refiner-shadow-to-gepa.mjs",
+    "pack:release": "node scripts/release/pack-release.mjs",
+    "publish:release": "node scripts/release/publish-release.mjs",
+    "publish:release:dry-run": "node scripts/release/publish-release.mjs --dry-run",
+    "publish:release:single": "node scripts/release/publish-release.mjs --single",
+    "publish:release:single:dry-run": "node scripts/release/publish-release.mjs --single --dry-run",
+    "publish:release:bun": "node scripts/release/publish-release.mjs --pm bun",
+    "publish:release:bun:dry-run": "node scripts/release/publish-release.mjs --pm bun --dry-run",
+    "publish:release:bun:single": "node scripts/release/publish-release.mjs --pm bun --single",
+    "publish:release:bun:single:dry-run": "node scripts/release/publish-release.mjs --pm bun --single --dry-run",
+    "publish:release:bun:linux": "node scripts/release/publish-release.mjs --pm bun --profile linux",
+    "publish:release:bun:linux:dry-run": "node scripts/release/publish-release.mjs --pm bun --profile linux --dry-run",
+    "version:check": "node scripts/check/check-version-alignment.mjs",
+    "todo:check": "node scripts/check/check-todo-fixme.mjs",
+    "event-contract:check": "node scripts/check/check-codex-event-contract.mjs",
+    "prompt-refiner:report": "node scripts/prompt/prompt-refiner-shadow-report.mjs",
+    "prompt-refiner:export-gepa": "node scripts/prompt/prompt-refiner-shadow-to-gepa.mjs",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:e2e:tmux": "MUDCODE_E2E_TMUX=1 vitest run tests/tmux/manager.integration.test.ts",
-    "test:replay:capture": "vitest run tests/bridge/capture-poller.replay.test.ts",
+    "test:replay:capture": "vitest run tests/bridge/runtime/capture-poller.replay.test.ts",
     "release:verify:bun": "bun run version:check && bun run typecheck && bun run test && bun run test:e2e:tmux && bun run publish:release:bun:dry-run",
     "release:verify:bun:single": "bun run version:check && bun run typecheck && bun run test && bun run test:e2e:tmux && bun run publish:release:bun:single:dry-run",
     "release:verify:bun:linux": "bun run version:check && bun run typecheck && bun run test && bun run test:e2e:tmux && bun run publish:release:bun:linux:dry-run",
@@ -56,8 +57,8 @@
     "release:publish:bun:linux": "bun run release:verify:bun:linux && bun run publish:release:bun:linux -- --skip-build",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "ci:local": "node scripts/ci-local.mjs",
-    "ci:local:e2e": "node scripts/ci-local.mjs --with-e2e"
+    "ci:local": "node scripts/ci/ci-local.mjs",
+    "ci:local:e2e": "node scripts/ci/ci-local.mjs --with-e2e"
   },
   "keywords": [
     "discord",
